--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -20,5 +20,5 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration
-      run: build.bat
+      run: ${{ github.workspace }}\build.bat
 
