--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,28 @@ cmake_minimum_required(VERSION 3.10)
 # Set the project name
 project(PLF)
 
+# Set the root directories for SDL2 and LuaJIT
+set(SDL2_DIR "PATH/TO/SDL")
+set(LUAJIT_DIR "PATH/TO/LuaJIT")
+
 # Add the executable
-add_executable(plf WIN32 main.c)
+add_executable(plf main.c)
 
-# Add include directories for Lua
-target_include_directories(plf PRIVATE ${CMAKE_SOURCE_DIR}/lua/include)
+# Include directories
+target_include_directories(plf PRIVATE
+    "${SDL2_DIR}/include"
+    "${LUAJIT_DIR}/include"
+)
 
-# Link against the Windows API and Lua library
-target_link_libraries(plf PRIVATE WinHttp user32 gdi32 ${CMAKE_SOURCE_DIR}/lua/lua54.lib)
+# Library directories
+target_link_directories(plf PRIVATE
+    "${SDL2_DIR}/lib/x64"
+    "${LUAJIT_DIR}/lib"
+)
+
+# Link libraries
+target_link_libraries(plf PRIVATE
+    SDL2
+    SDL2main
+    lua51  # Replace with 'luajit' if that's the correct library name
+)
